--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.0",
+    "antd-img-crop": "^4.21.0",
     "axios": "^1.6.7",
     "i18next": "^23.10.1",
     "mockjs": "^1.1.0",
