--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.0",
     "antd-img-crop": "^4.21.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
+    "braft-editor": "^2.3.9",
     "i18next": "^23.10.1",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
